--- a/public/mockup/styles/_actions_menu.sass
+++ b/public/mockup/styles/_actions_menu.sass
@@ -33,6 +33,7 @@
     white-space: nowrap
     border: 1px solid $clr_gray_40
     +box-shadow($clr_gray_30 0px 0px 6px)
+    text-shadow: rgba(255, 255, 255, 1) 1px 1px 0px
     a, span
       color: $clr_gray_60
       display: block
