--- a/app/templates/partials/thread.jade.erb
+++ b/app/templates/partials/thread.jade.erb
@@ -15,7 +15,7 @@
         - if (self.task_list && self.project)
           a(href= self.task_list_url(self.task_list, self.project))= self.name + ' task list'
       - else
-        a(href= self.conversation_url(self, self.project))= self.name + ' conversation'
+        a(href= self.conversation_url(self, self.project))= self.name ? self.name : '<%= t('conversations.untitled')%>'
 
     .project_overlay
       a(href= self.project_url(self.project), data-project-id= self.project.id)= self.project.name
