refactored and started new task list and reorder

--- a/app/templates/task_lists/index.jade.erb
+++ b/app/templates/task_lists/index.jade.erb
@@ -1,3 +1,7 @@
+a#reorder_task_lists(href= '#', style='display: inline-block;') Reorder Task Lists
+a#done_reordering_task_lists(style='display:none', href="#") Done reorder
+a#toggle_new_task_list(href= '#') New Task List
+
 .task_list_container
 
   - for (var i = 0, len = self.tasks.length; i < len; i++)
