--- a/app/templates/search/quicksearch.jade.erb
+++ b/app/templates/search/quicksearch.jade.erb
@@ -4,7 +4,9 @@ ul#quicksearch_results
   - each result in self.results
     - if (_.any(['Task','Conversation'], function (type) { return result.type === type;}))
       - var model = new Teambox.Models.Thread(result)
+      - var text = model.get('name')
     - else
       - var model = new Teambox.Models[result.type](result)
+      - var text = result.type === 'Person' ? model.get('user').username : model.get('name');
     li
-      a.result(href= '/#!' + model.publicUrl())= model.get('type') + ': ' + model.get('name')
+      a.result(href= '/#!' + model.publicUrl())= model.get('type') + ': ' + text
