--- a/public/mockup/styles/_tasks.sass
+++ b/public/mockup/styles/_tasks.sass
@@ -377,11 +377,12 @@ p.view_for_all
 
 .filters
   display: block
-  background-color: #f9f9f9
-  border: 1px solid #ddd
+  float: left
+  clear: both
+  width: 100%
   font-size: 12px
-  margin: 25px 0
-  padding: 5px 10px
+  margin: 8px 0 20px 10px
+  padding: 0
   input
     width: 120px
     margin: 0 5px
