Initial simple backbonization of google docs feature.
Currently only selecting a doc (once authenticated) works

Pending porting google_docs to API

--- a/app/views/google_docs/_list.haml
+++ b/app/views/google_docs/_list.haml
@@ -1,4 +1,4 @@
-%ul#google_docs_list
+%ul.google_docs_list
   - @list.each_with_index do |item, index|
     %li
       = google_docs_checkbox_tag(item, index)
