--- a/app/templates/partials/comment_form.jade.erb
+++ b/app/templates/partials/comment_form.jade.erb
@@ -20,12 +20,8 @@ input(name= 'utf8', type= 'hidden', value= '✓')
     .attach
       span <%= t('comments.fields.attach')%>
       a(href= '#uploads', class= 'attach_icon hoverable', title= '<%= t('uploads.tooltip')%>') Attachment
-      .google_docs_attachment
-        a(href= '/google_docs', rel= 'facebox')
-          img(alt= 'Icon_6_document', class= 'google_docs_logo', src= '/images/google_docs/icon_6_document.gif')
-        .google_docs_attachment_form_area(data-object-name= 'comments_attributes[0]')
-          .fields
-          ul.file_list
+      a(href= '/google_docs', class='google_doc_icon')
+        img(alt= 'Icon_6_document', class= 'google_docs_logo', src= '/images/google_docs/icon_6_document.gif')
 
       - if (self.is_task)
         a(href= '#hours', class= 'add_hours_icon hoverable', title= '<%= t('comments.hours.tooltip_short') %>') <%= t('comments.hours.tooltip') %>
