--- a/app/views/google_docs/_new_form.haml
+++ b/app/views/google_docs/_new_form.haml
@@ -1,4 +1,4 @@
-#create_google_document_form
+.create_google_document_form
   %h2= t('google_docs.create_new')
   = form_for GoogleDoc.new, :html => {:'data-remote' => true} do |f|
     = f.text_field :title, :placeholder => t('google_docs.new_document_placeholder')
